# filetypetranslator

./: .gitignore  README.md  package.cmd
.github/workflows/: codeql-analysis.yml
src/FTT/: FTT.csproj  FTT.sln  Sources.cs
src/FTT/Properties/: AssemblyInfo.cs
src/FTTLib/: FTT.categories.cs  FTT.cs  FTT.generated.cs  FTTLib.csproj  FTTLib.dll.nuspec  FTTLib.snk  FileCategory.cs
src/FTTLib/Properties/: AssemblyInfo.cs
src/netstandard/FTT/: Extensions.cs  FTT.csproj  FTT.sln  MimeDbInfo.cs  MimeType.cs  Program.cs  Sources.cs  jsonDict.cs
src/netstandard/FTT/Properties/: JavascriptClass.js  PythonClass.py  Resources.Designer.cs  Resources.resx
src/netstandard/FTT/generators/: CodeGeneratorBase.cs  CsharpGenerator.cs  ICodeGenerator.cs  JavascriptGenerator.cs  PythonGenerator.cs
src/netstandard/FTT/models/: MimeType.cs
src/netstandard/FTTLib/: FTT.categories.cs  FTT.cs  FTT.generated.cs  FTTLib.csproj  FTTLib.dll.nuspec  FileCategory.cs
src/netstandard/FTTLibTests/: FTTLibTests.csproj  FTTTests.cs
src/node/: README.md  package.json
src/node/test/: index.js  package.json
src/python/: LICENSE  README.md  deploy.cmd  pyproject.toml  setup.py
src/python/fttlib/: FTT.py
src/python/test/: test.py
